[package]
name = "fixed-size"
description = "Attribute macro to replace variable length types with fixed length types in struct definitions. Useful for overriding String when using prost."
version = "1.0.0"
authors = ["Trevor R.H. Clarke <retrev@csh.rit.edu>"]
license = "MIT/Apache-2.0"
keywords = ["attribute","macro"]
repository = "https://github.com/tclarke/fixed-size"
documentation = "https://docs.rs/crate/fixed-size"
readme = "README.md"
edition = "2021"
publish = true

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
proc-macro2 = { version = "1.0.69" }
quote = { version = "1.0.33" }
syn = { version = "2.0.38", features = ["fold", "full", "extra-traits"] }

[dev-dependencies]
arrayvec = { version = "0.7.4", features = ["serde"] }
bincode = { version = "1.3.3" }
serde = { version = "1.0.190", features = ["derive"] }
